# AutoMove-NG

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO  update-baselines.py  vcpkg-configuration.json  vcpkg.json
scripts/: glob_src.py  mkrelease.py
src/: CustomDestination.cpp  CustomDestination.h  Papyrus.cpp  Papyrus.h  Serialization.cpp  Serialization.h  main.cpp
src/Events/: Events.cpp  Events.h  OnCustomDestinationArrived.cpp  OnCustomDestinationArrived.h  OnMarkerChange.cpp  OnMarkerChange.h  OnPlayerDialogue.cpp  OnPlayerDialogue.h
src/Hooks/: AutoMoveHook.cpp  CameraHooks.cpp  Hooks.cpp  Hooks.h  OnMarkerChangeHook.cpp  OnPlayerDialogueHook.cpp
